[package]
name = "coset"
version = "0.4.1"
authors = ["David Drysdale <drysdale@google.com>", "Paul Crowley <paulcrowley@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Set of types for supporting COSE"
repository = "https://github.com/google/coset"
keywords = ["cryptography", "cose"]
categories = ["cryptography"]
rust-version = "1.81"

[features]
default = []

# The `std` feature is maintained for back-compatibility; it previously enabled a
# `std::error::Error` impl for `CoseError`, but the code now (always) has a
# `core::error::Error` impl.
std = []

[dependencies]
ciborium = { version = "^0.2.1", default-features = false }
ciborium-io = { version = "^0.2.0", features = ["alloc"] }

[dev-dependencies]
hex = "^0.4.2"
